--- a/FilterPhoto/app/src/main/AndroidManifest.xml
+++ b/FilterPhoto/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FilterPhoto">
-        <activity android:name=".kotlin.CameraResultActivity"></activity>
+        <activity android:name=".kotlin.FinalImageActivity"></activity>
+        <activity android:name=".kotlin.CameraResultActivity" />
         <activity android:name=".kotlin.ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
